	    branch name.
	    Closes bug 23
	  - The array '$ezmlm->mailing_lists_hostsindex' also contains
	    a COUNT value (which is NOT an array). This value is a
	    counter on how many lists/domains that exists in the system.
	    Don't try to do a foreach on this value, it will give an
	    error like 'Invalid argument supplied for foreach()'.
	    Closes bug 24
 
	GUI layout change
	  - Possibility to set a value in the domain branch saying we
	    automatically would like to create username (uid) and/or
	    email address. This is done with two new attributes added
	    to the phpQLAdminBranch objectclass. The attributes oid is:
		autoCreateUsername	1.3.6.1.4.1.8767.3.2.1.14
		autoCreateMailAddress	1.3.6.1.4.1.8767.3.2.1.15
	    Closes bugs 3, 4 and 5
	  - Added the possibility to allow/disallow user from viewing/administrating
	    the QmailLDAP/Controls information by adding a new attribute
	    to the phpQLAdminBranch objectclass. The attribute OID is:
		controlsAdministrator	1.3.6.1.4.1.8767.3.2.1.16
	    Closes bug 13
	  - Disable the showing of the icons 'Delivery properties',
	    'Mailbox properties' and 'User access' if we don't run in
	    advanced mode.
	    Closes bug 12
	  - Allow for setting a new branch default - Automatic username
	    prefix. This option is only visible in the domain/branch
	    details page if 'Automaticly generate username' is set to
	    true. Required a new attribute to the phpQLAdminBranch
	    objectclass. The OID is:
		userNamePrefix          1.3.6.1.4.1.8767.3.2.4.13
	  - Duplicate the 'Defined in {rcpthosts,locals}' in the domain
	    details page. This new option is 'Defined in smtproutes'.
	    + To make this work, it is nessesary that the 'smtpRoutes'
	      (OID: 1.3.6.1.4.1.7006.1.2.1.35) attribute have a matching
	      rule of caseIgnoreIA5SubstringsMatch. What this means
	      in plain English is that the line:
		'SUBSTR caseIgnoreIA5SubstringsMatch'