@@ -140,26 +140,12 @@ if($view == 'default') {
 
 if($view == 'owner') {
 	include("./tables/domain_details-owner.inc");
+} elseif($view == 'chval') {
+	include("./tables/domain_details-users_chval.inc");
+} elseif($view == 'users') {
+	include("./tables/domain_details-users.inc");
 }
-
-if(($view == 'users') or ($view == 'chval')) {
-	$users = pql_get_user($_pql->ldap_linkid, $domain);
-
-	if(is_array($users)) {
-		if($view == 'chval')
-		  include("./tables/domain_details-users_chval.inc");
-		elseif($view == 'users')
-		  include("./tables/domain_details-users.inc");
-	} else {
-?>
-  <br><br>
-  <table cellspacing="0" cellpadding="3" border="0">
-    <th colspan="2" align="left"><?=$LANG->_('No users in this branch')?>!</th>
-  </table>
-<?php
-	}
-}
-
+	 
 if($ADVANCED_MODE == 1) {
 	if($view == 'dnsinfo')
 		include("./tables/domain_details-dnsinfo.inc");
